--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Website</title>
   </head>
   <body>
+    <div class="hello">
+      <h1>HI</h1>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
