--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="hello">
-      <h1>HI</h1>
+      <h1 class="font">HI</h1>
     </div>
 
     <script src="app.js"></script>
