--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Website</title>
   </head>
   <body>
-    <div class="hello">
-      <h1 class="font">HI</h1>
-    </div>
-
+    <form id="login-form" class="hidden">
+      <input type="text" placeholder="name" maxlength="10" required />
+      <input type="submit" value="Log In" />
+    </form>
+    <h1 id="greeting" class="hidden"></h1>
+    <a href="https://xeexin.github.io/" target="_blank">Go to Home</a>
     <script src="app.js"></script>
   </body>
 </html>
