--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Website</title>
   </head>
   <body>
+    <h2 id="clock">00:00:00</h2>
+
     <form id="login-form" class="hidden">
       <input type="text" placeholder="name" maxlength="10" required />
       <input type="submit" value="Log In" />
     </form>
     <h1 id="greeting" class="hidden"></h1>
+
     <a href="https://xeexin.github.io/" target="_blank">Go to Home</a>
-    <script src="app.js"></script>
+
+    <script src="js/greeting.js"></script>
+    <script src="js/clock.js"></script>
   </body>
 </html>
