--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 
     <a href="https://xeexin.github.io/" target="_blank">Go to Home</a>
 
+    <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
+
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
   </body>
 </html>
