--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
 
     <a href="https://xeexin.github.io/" target="_blank">Go to Home</a>
 
+    <form id="todo-form">
+      <input type="text" placeholder="Write a To Do and Press" />
+    </form>
+    <ul id="todo-list"></ul>
+
     <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
+
+    <div id="weather">
       <span></span>
       <span></span>
     </div>
@@ -25,5 +35,8 @@
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
   </body>
 </html>
