--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/weather.js"></script>
+    <script src="api_key"></script>
   </body>
 </html>
