--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </form>
     <h1 id="greeting" class="hidden"></h1>
 
-    <form id="todo-form">
-      <input type="text" placeholder="Write a To Do and Press" />
+    <form id="todo-form" class="hidden">
+      <input type="text" placeholder="Write a To Do" />
     </form>
     <ul id="todo-list"></ul>
 
