--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css" />
+
     <title>Website</title>
   </head>
+  <h2 id="clock">00:00:00</h2>
   <body>
-    <h2 id="clock">00:00:00</h2>
+    <div class="login">
+      <form id="login-form" class="hidden">
+        <input type="text" placeholder="name" maxlength="10" required />
+        <input type="submit" value="Log In" />
+      </form>
+      <h1 id="greeting" class="hidden"></h1>
+    </div>
 
-    <form id="login-form" class="hidden">
-      <input type="text" placeholder="name" maxlength="10" required />
-      <input type="submit" value="Log In" />
-    </form>
-    <h1 id="greeting" class="hidden"></h1>
-
-    <form id="todo-form" class="hidden">
-      <input type="text" placeholder="Write a To Do" />
-    </form>
-    <ul id="todo-list"></ul>
+    <div class="todo">
+      <form id="todo-form" class="hidden">
+        <input type="text" placeholder="Write a To Do" />
+      </form>
+      <ul id="todo-list"></ul>
+    </div>
 
     <div id="quote">
       <span></span>
